--- a/syntax_sprint/static/css/styles.css
+++ b/syntax_sprint/static/css/styles.css
@@ -113,15 +113,6 @@
     margin-top: 16px; /* Espacio entre el test y los resultados */
   }
 
-  pre {
-    white-space: pre-wrap;
-    background: #333;
-    color: #fff;
-    padding: 1000px;
-    border-radius: 5px;
-    max-width: 100%; /* Asegúrate de que ocupe el ancho disponible */
-    overflow-x: auto; /* Permite el scroll horizontal si el contenido es muy largo */
-}
 
 
   h2 {
@@ -260,7 +251,7 @@ button#start-test:hover {
   flex-direction: column;
   margin-top: 32px; /* Espacio entre el botón y el área de test */
   width: 100%; /* Asegura que ocupe el ancho disponible */
-  max-width: 800px; /* Limita el ancho máximo del área de test */
+  max-width: 10000px; /* Limita el ancho máximo del área de test */
 }
 
 
@@ -305,4 +296,70 @@ footer {
 
 .mx-1 {
   margin: 0 4px;
+}
+
+/* login */
+
+.container {
+  text-align: center;
+    width: 100%;
+    max-width: 400px; /* Ancho máximo del formulario */
+    padding: 20px;
+    background-color: var(--black); /* Fondo blanco para el formulario */
+
+
+}
+
+
+h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  color: var(--yellow); 
+}
+
+/* Estilos para el mensaje de error */
+.error-message {
+  margin-bottom: 20px;
+}
+
+#error-msg {
+  color: red; /* Color del mensaje de error */
+  font-size: 1rem;
+}
+
+/* Estilos para el formulario */
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid var(--gray);
+  border-radius: 4px;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 18px;
+  color: var(--black);
+  background-color: var(--yellow); /* Color de fondo del botón */
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: var(--yellow); /* Color del botón en hover */
+  transform: scale(1.03);
 }
