--- a/syntax_sprint/templates/index.html
+++ b/syntax_sprint/templates/index.html
@@ -27,7 +27,7 @@
       const apiUrl = "{% url 'get_python_function' %}";
     </script>
   </head>
-  <body>
+  <body class="index-page">
     <main>
       <nav>
         <a class="navbar-brand" href="{% url 'index' %}">
