--- a/syntax_sprint/templates/index.html
+++ b/syntax_sprint/templates/index.html
@@ -39,12 +39,10 @@
             <li>
               <a href="{% url 'index' %}">Inicio</a>
             </li>
-            <li>
-              <a href="{% url 'settings' %}">Ajustes</a>
-            </li>
+
             {% if user.is_authenticated %}
             <li>
-              <span>Hola, {{ user.username }}</span>
+              <a href="{% url 'profile' %}">Hola, {{ user.username }}</a>
             </li>
             <li>
               <a href="{% url 'logout' %}">Cerrar sesión</a>
@@ -72,11 +70,15 @@
         Copyright &copy; Crédito a los respectivos autores
       </div>
       <div class="links">
-        <a href="#!">LinkedIn</a>
+        <a
+          href="https://www.linkedin.com/in/oswaldo-fonseca-gonzalez/"
+          target="_blank"
+          >LinkedIn</a
+        >
         <span class="mx-1">&middot;</span>
-        <a href="#!">GitHub</a>
+        <a href="https://github.com/Chorexxs" target="_blank">GitHub</a>
         <span class="mx-1">&middot;</span>
-        <a href="#!">Portfolio</a>
+        <a href="https://chorexxs-portfolio.dev/" target="_blank">Portfolio</a>
       </div>
     </footer>
   </body>
