--- a/syntax_sprint/templates/profile.html
+++ b/syntax_sprint/templates/profile.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 
 <!DOCTYPE html>
@@ -27,50 +26,47 @@
       const apiUrl = "{% url 'get_python_function' %}";
     </script>
   </head>
-  <body>
+  <body class="profile-page">
     <main>
-      
       <nav>
         <a class="navbar-brand" href="{% url 'index' %}">
           <span class="syntax">Syntax</span><span class="sprint">Sprint</span>
-      </a>
-      
+        </a>
+
         <div class="navbar">
-        <ul class="navbar-nav">
-          <li>
-            <a href="{% url 'index' %}">Inicio</a>
-          </li>
-          <li>
-            <a href="{% url 'settings' %}">Ajustes</a>
-          </li>
-          {% if user.is_authenticated %}
-          <li>
-            <span>Hola, {{ user.username }}</span>
-          </li>
-          <li>
-            <a  href="{% url 'logout' %}">Cerrar sesión</a>
-          </li>
-          {% else %}
-          <li>
-            <a  href="{% url 'login' %}">Iniciar sesión</a>
-          </li>
-          <li>
-            <a  href="{% url 'signup' %}">Registrarse</a>
-          </li>
-          {% endif %}
-        </ul>
+          <ul class="navbar-nav">
+            <li><a href="{% url 'index' %}">Inicio</a></li>
+
+            {% if user.is_authenticated %} {% if not on_profile_page %}
+            <li><span>Hola, {{ user.username }}</span></li>
+            {% endif %}
+            <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+            <li><a href="{% url 'signup' %}">Registrarse</a></li>
+            {% endif %}
+          </ul>
+        </div>
       </nav>
-    </div>
-     
+      <div>
+        <span class="text"> {{ user.username }} </span>
+      </div>
     </main>
+
     <footer>
-      <div class="copyright">Copyright &copy; Crédito a los respectivos autores</div>
+      <div class="copyright">
+        Copyright &copy; Crédito a los respectivos autores
+      </div>
       <div class="links">
-        <a href="#!">LinkedIn</a>
+        <a
+          href="https://www.linkedin.com/in/oswaldo-fonseca-gonzalez/"
+          target="_blank"
+          >LinkedIn</a
+        >
         <span class="mx-1">&middot;</span>
-        <a href="#!">GitHub</a>
+        <a href="https://github.com/Chorexxs" target="_blank">GitHub</a>
         <span class="mx-1">&middot;</span>
-        <a href="#!">Portfolio</a>
+        <a href="https://chorexxs-portfolio.dev/" target="_blank">Portfolio</a>
       </div>
     </footer>
   </body>
