--- a/syntax_sprint/templates/signup.html
+++ b/syntax_sprint/templates/signup.html
@@ -26,50 +26,109 @@
       const apiUrl = "{% url 'get_python_function' %}";
     </script>
   </head>
-  <body>
+  <body class="login-page">
     <main>
-      
       <nav>
         <a class="navbar-brand" href="{% url 'index' %}">
           <span class="syntax">Syntax</span><span class="sprint">Sprint</span>
-      </a>
-      
+        </a>
         <div class="navbar">
-        <ul class="navbar-nav">
-          <li>
-            <a href="{% url 'index' %}">Inicio</a>
-          </li>
-          <li>
-            <a href="{% url 'settings' %}">Ajustes</a>
-          </li>
-          {% if user.is_authenticated %}
-          <li>
-            <span>Hola, {{ user.username }}</span>
-          </li>
-          <li>
-            <a  href="{% url 'logout' %}">Cerrar sesión</a>
-          </li>
-          {% else %}
-          <li>
-            <a  href="{% url 'login' %}">Iniciar sesión</a>
-          </li>
-          <li>
-            <a  href="{% url 'signup' %}">Registrarse</a>
-          </li>
-          {% endif %}
-        </ul>
+          <ul class="navbar-nav">
+            <li><a href="{% url 'index' %}">Inicio</a></li>
+
+            {% if user.is_authenticated %}
+            <li>
+              <a href="{% url 'profile' %}">Hola, {{ user.username }}</a>
+            </li>
+            <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+            <li><a href="{% url 'signup' %}">Registrarse</a></li>
+            {% endif %}
+          </ul>
+        </div>
       </nav>
-    </div>
-     
+
+      <div class="container">
+        <span class="text">Registrarse</span>
+
+        <!-- Mensaje de error -->
+        <div class="error-message">
+          {% if messages %} {% for message in messages %}
+          <h5 class="error-msg">{{ message }}</h5>
+          {% endfor %} {% endif %}
+        </div>
+
+        <!-- Formulario -->
+        <form action="" method="POST" class="login-form">
+          {% csrf_token %}
+          <div class="input-container">
+            <i class="fas fa-user fa-lg icon"></i>
+            <input
+              type="text"
+              name="username"
+              class="form-control"
+              placeholder="Nombre de usuario"
+              required
+            />
+          </div>
+
+          <div class="input-container">
+            <i class="fas fa-user fa-lg icon"></i>
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              placeholder="email"
+              required
+            />
+          </div>
+
+          <div class="input-container">
+            <i class="fas fa-lock fa-lg icon"></i>
+            <input
+              type="password"
+              name="password"
+              class="form-control"
+              placeholder="Contraseña"
+              required
+            />
+          </div>
+
+          <div class="input-container">
+            <i class="fas fa-lock fa-lg icon"></i>
+            <input
+              type="password"
+              name="password2"
+              class="form-control"
+              placeholder="Repetir contraseña"
+              required
+            />
+          </div>
+
+          <div class="button-container">
+            <button type="submit" class="btn btn-primary btn-lg">
+              Registrarse
+            </button>
+          </div>
+        </form>
+      </div>
     </main>
+
     <footer>
-      <div class="copyright">Copyright &copy; Crédito a los respectivos autores</div>
+      <div class="copyright">
+        Copyright &copy; Crédito a los respectivos autores
+      </div>
       <div class="links">
-        <a href="#!">LinkedIn</a>
+        <a
+          href="https://www.linkedin.com/in/oswaldo-fonseca-gonzalez/"
+          target="_blank"
+          >LinkedIn</a
+        >
         <span class="mx-1">&middot;</span>
-        <a href="#!">GitHub</a>
+        <a href="https://github.com/Chorexxs" target="_blank">GitHub</a>
         <span class="mx-1">&middot;</span>
-        <a href="#!">Portfolio</a>
+        <a href="https://chorexxs-portfolio.dev/" target="_blank">Portfolio</a>
       </div>
     </footer>
   </body>
