trabajando en la lógica del profile.html

--- a/syntax_sprint/templates/index.html
+++ b/syntax_sprint/templates/index.html
@@ -25,6 +25,7 @@
     <!-- Definir la variable apiUrl -->
     <script>
       const apiUrl = "{% url 'get_python_function' %}";
+      const saveResultUrl = "{% url 'save_typing_test_result' %}";
     </script>
   </head>
   <body class="index-page">
