--- a/syntax_sprint/templates/profile.html
+++ b/syntax_sprint/templates/profile.html
@@ -24,6 +24,7 @@
 
     <script>
       const apiUrl = "{% url 'get_python_function' %}";
+      const saveResultUrl = "{% url 'save_typing_test_result' %}";
     </script>
   </head>
   <body class="profile-page">
