--- a/syntax_sprint/templates/signup.html
+++ b/syntax_sprint/templates/signup.html
@@ -11,7 +11,7 @@
     <title>SyntaxSprint - Carrera de código</title>
 
     <!-- Enlace al favicon -->
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'icon/icon.svg' %}" />
 
     <!-- Enlace a styles.css -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
